# CMT316-Object-Detection-Project

./: .env.sample  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  annotations.dvc  raw-images.dvc
notebooks/: 01_EDA.ipynb  01_eda_simon.ipynb  03_SMH_Model_DEV.ipynb  03_SMH_YOLO_Model_DEV.ipynb  04_SMH_RetinaNet_HyperparameterTuning.ipynb  05-smh-retinanet-training.ipynb  06_SMH_RetinaNet_Detectron.ipynb  07_SMH_FasterRCNN_Training.ipynb  08_ELJ_RT-DETR.ipynb  ModelEnsemblePipeline.ipynb  retinahyperparamtuning.ipynb
scripts/: dev_split.py  download_data.py  pascal2yolo.py
